# TheRayTracingChallenge

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  Scene.cpp  clock.cpp  loadscene.cpp  main.cpp  phong_shading.cpp  projectile.cpp  silhouette.cpp
include/: Camera.h  Canvas.h  Color.h  Intersection.h  Light.h  Material.h  MathUtil.h  Matrix.h  Ray.h  Renderer.h  Shape.h  Sphere.h  Transformation.h  Tuple.h  VectorTrait.h  World.h
include/Patterns/: CheckerPattern.h  GradientPattern.h  Pattern.h  RingPattern.h  StripePattern.h  TestPattern.h
include/Shapes/: Plane.h  Shape.h  Sphere.h
include/utils/: json.h
res/: refract.json  refraction.json  test.json
src/: CMakeLists.txt  Camera.cpp  Canvas.cpp  Color.cpp  Intersection.cpp  Material.cpp  Ray.cpp  Renderer.cpp  Shape.cpp  Sphere.cpp  Transformation.cpp  Tuple.cpp  World.cpp
src/Patterns/: CheckerPattern.cpp  GradientPattern.cpp  Pattern.cpp  RingPattern.cpp  StripePattern.cpp  TestPattern.cpp
src/Shapes/: Plane.cpp  Shape.cpp  Sphere.cpp
src/utils/: json.cpp
test/: CMakeLists.txt  Camera_test.cpp  Canvas_test.cpp  Color_test.cpp  Intersecrtion_test.cpp  Material_test.cpp  Matrix_test.cpp  Pattern_test.cpp  Ray_test.cpp  Renderer_test.cpp  Shape_Test.cpp  TestUtil.h  Transformation_test.cpp  Tuple_test.cpp  World_Test.cpp  json_test.cpp
